--- a/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
@@ -13,3 +13,17 @@ body {
     background-size: contain;
     background-position: right;
 }
+.notification-badge {
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 2px 6px;
+    border-radius: 50%;
+   
+    top: 5px;
+    right: 10px;
+    min-width: 10px;
+    min-height:10px;
+    text-align: center;
+}
