#PK-1095 Groupbuy filepicker changes

--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -116,6 +116,10 @@
     margin-right: 287px;
 }
 
+    .image-list-container .btn-sm {
+        --bs-btn-padding-y: 0.23rem;
+    }
+
 .image-container {
     position: relative;
     height: 100px;
