--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -31,6 +31,8 @@
     <link href="_content/Blazorise.LoadingIndicator/blazorise.loadingindicator.css" rel="stylesheet" />
 
     <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js.map"></script>
+    <script src="~/libs/bootstrap/js/bootstrap.bundle.js"></script>
 
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
